epserde/tests/fail/force_full_with_args.stderr
error: 'force_full' is a field-level marker and takes no arguments; use #[epserde(force_full)]
  --> tests/fail/force_full_with_args.rs:15:15
   |
15 |     #[epserde(force_full(T))]
   |               ^^^^^^^^^^
